# rA9-Base

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  CURRENT_BRANCH_README.md  LICENSE  MANIFEST.in  Makefile  PROFESSIONAL_UPGRADE_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  UPLOAD_INSTRUCTIONS.md  check_deps.py  env.example  init_repository.py  install.py  install_current.py  package-lock.json  payload.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_ra9.py  upload_to_github.py
examples/: advanced_usage.py  basic_usage.py  test_runner.py
ra9/: __init__.py  _version.py  cli.py  interactive_cli.py  main.py  requirements.txt  server.py  test_brain_architecture.py  test_complete_brain_architecture.py
ra9-frontend-main/: README.md  job-store.json  package-lock.json  package.json  pnpm-lock.yaml
ra9-frontend-main/app/: globals.css  layout.tsx  page.tsx
ra9-frontend-main/app/api/v1/job/[jobId]/stream/: route.ts
ra9-frontend-main/app/api/v1/query/: route.ts
ra9-frontend-main/app/api/v1/telemetry/: route.ts
ra9-frontend-main/app/api/v1/trace/[jobId]/: route.ts
ra9-frontend-main/app/composer/: page.tsx
ra9-frontend-main/app/dashboard/: page.tsx
ra9-frontend-main/app/hybrid/: page.tsx
ra9-frontend-main/app/inspector/: page.tsx
ra9-frontend-main/app/onboarding/: page.tsx
ra9-frontend-main/app/planner/: page.tsx
ra9-frontend-main/app/settings/: page.tsx
ra9-frontend-main/app/tools/: page.tsx
ra9-frontend-main/components/hybrid/: hybrid-chat-stream.tsx  hybrid-composer.tsx  iteration-card.tsx  iteration-timeline.tsx  thought-box.tsx  verifier-panel.tsx
ra9-frontend-main/components/ra9/: citation-badge.tsx  compact-token-streamer.tsx  deliberation-dial.tsx  hybrid-chat-stream.tsx  hybrid-composer.tsx  hybrid-iteration-timeline.tsx  iteration-timeline.tsx  memory-card.tsx  planner-canvas.tsx  query-composer.tsx  session-list.tsx  stream-view.tsx  theme-tray.tsx  thought-box.tsx  tool-runner.tsx  ui-prefs.tsx
ra9-frontend-main/types/: hybrid.ts  iteration-trace.ts  telemetry.ts
ra9/Prompts/ra9-v0.01 alpha/: RA9BrainToolLayerPrompt.json  RA9CodeExecutionLayerPrompt.json  RA9CoreSystemPrompt.json  RA9CreativeMetaLayerPrompt.json  RA9EmotionalMemoryLayerPrompt.json  RA9EmotionalMetaLayerPrompt.json  RA9EthicalOversightLayerPrompt.json  RA9FeedbackAggregationLayerPrompt.json  RA9FramingLayerPrompt.json  RA9GraphicalOutputAgentPrompt.json  RA9KnowledgeMemoryLayerPrompt.json  RA9KnowledgeRetrievalAgentPrompt.json  RA9LearningAdaptationLayerPrompt.json  RA9LogicalMetaLayerPrompt.json  RA9MemoryRecallLayerPrompt.json  RA9MetaCoherenceAgentPrompt.json  RA9OperationalMetaLayerPrompt.json  RA9QueryClassifierLayerPrompt.json  RA9ReflectiveLayerPrompt.json  RA9SearchAgentLayerPrompt.json  RA9StrategicMemoryLayerPrompt.json  RA9StrategicMetaLayerPrompt.json  reflective_engine_prompt.json  spiritual_meta_layer.json
ra9/agents/: __init__.py  base_agent.py  creative_agent.py  emotion_agent.py  feedback_agent.py  logic_agent.py  meta_coherence_agent.py  strategy_agent.py
ra9/core/: __init__.py  agent_critique.py  cli_quality_summary.py  cli_workflow_engine.py  config.py  dynamic_reflection_engine.py  engine.py  enhanced_cli_ui.py  executor.py  feature_encoders.py  framer.py  gating_manager.py  global_workspace.py  langchain_dynamic_engine.py  langchain_integration.py  local_reasoners.py  logger.py  meta_coherence_engine.py  neuromodulation_controller.py  perception_adapter.py  query_complexity_analyzer.py  reflective.py  schemas.py  self_persona.yaml  simple_response_handler.py  test_utils.py  validators.py
ra9/council/: __init__.py  aggregator.py  councils.py  llm_client.py  pipeline.py  prompts.py  query_analyzer.py  retrieval.py  safety.py  schemas.py  synthesis.py  trust.py  workers.py
ra9/router/: __init__.py  context_preprocessor.py  query_classifier.py
ra9/tools/: __init__.py  search_agent.py  tool_api.py
tests/: test_council_pipeline.py  test_e2e_memory_toggle.py  test_integration_quality.py  test_memory_basic.py  test_memory_events.py  test_novelty_write.py  test_pii_redaction.py  test_procedural_and_rebuild.py  test_quality_guards.py  test_realworld_application.py  test_retrieval_scoring.py  test_scoring_parity.py  test_stress_metrics.py  test_tombstone_rebuild.py  test_working_memory.py  test_working_memory_persistent.py
